# cMakeStarter

./: .gitignore  CMakeLists.txt  compile_commands.json  dev.bat  justfile  readme.md  x64NativeTools.lnk
docs/: Copper_api.html  Hashlib_docs.url  Magic_enum_api.html  Subprocessing.html  dylib_docs.html  nlohmann_json_ JSON_api.html  parallel_hashmap_docs.url  ringspan.html  spdlog_docs.url
src/: version.h
src/app/: app.cpp  app.h
src/exampleCode/: examples.cpp  examples.h
src/globals/: events.h  globals.h  logger.cpp  logger.h
src/main/: main.cpp  mainLoop.cpp  mainLoop.h
src/threadCtrl/: thread_ctrl.cpp  thread_ctrl.h
src/utilities/: bitManipulation.h  enumerator.h  randomNumber.h  result.h  ring.hpp  ring_span.hpp  subprocess.hpp  timestamp.cpp  timestamp.h  utilities.h
support/: clean.ps1  commands.ps1  get_dir_list.cmake  install_deps.ps1  multi_ninja.ps1  runDev.ps1  version.h.in  zip.ps1
